Number Systems DONE

--- a/01-HTML/index.html
+++ b/01-HTML/index.html
@@ -17,26 +17,69 @@
     <link rel="icon" href="bitcoin.ico" type="image/x-icon">
 </head>
 <body>
-    <!--<h1 align="center">Заголовок 1 - может быть только один на странице, это как название книги</h1>
+    <h1 style="text-align:center;font-family:Arial;color:darkblue">Заголовок 1 - может быть только один на странице, это как название книги</h1>
+    <!--<h1 align="center">Заголовок 1 - может быть только один на странице, это как название книги</h1>-->
     <p>Остальных заголовков может быть сколько угодно на страницу, H1 - только один</p>
     <hr>
-    <h2 align="center">Дескрипторы (Tags)</h2>-->
-    <!--<h3>Заголовок 3</h3>
+    <h2 style="text-align:left">Дескрипторы (Tags)</h2>
+    <h3>Заголовок 3</h3>
     <h4>Заголовок 4</h4>
     <h5>Заголовок 5</h5>
-    <h6>Заголовок 6</h6>-->
-    <!--<p>
+    <h6>Заголовок 6</h6>
+    <p>
         <b>&#60;p&#62; (Paragraph) (Obsolete)</b> - блочный дескриптор, который описывает абзац и поддерживает следующие атрибуты:<br>
         <b>align</b>="<i>left | right | center | justify</i>" - выравнивание абзаца.<br>
         <b>&#60;b&#62; (Bold)</b> - <b>это линейный дескриптор, который делает текст жирным;</b><br>
         <b>&#60;i&#62; (Italic)</b> - <i>это линейный дескриптор, который делает текст курсивным;</i><br>
         <b>&#60;u&#62; (Underscore)</b> - <u>это линейный дескриптор, который подчёркивает текст;</u><br>
         <b>&#60;s&#62; (Strike)</b> - <s>это линейный дескриптор, который перечёркивает текст;</s><br>
-        <b>&#60;strike&#62; (Strike) (Obsolete)</b> - <strike>это линейный дескриптор, который перечёркивает текст;</strike><br>
+        <b>&#60;strike&#62; (Strike) (Obsolete)</b> - <span style="text-decoration:line-through">это линейный дескриптор, который перечёркивает текст;</span><br>
+    </p>
+    <h2>Специальные символы на странице</h2>
+    Для отображения специальных символов в HTML используются специальные последовательности. Спецсимволы также можно 
+    отображать при помощи числовых кодов<br>
+                                        <a href="https://htmlbook.ru/samhtml/tekst/spetssimvoly">https://htmlbook.ru/samhtml/tekst/spetssimvoly</a>
+    &#9834;
+    <h2>Дескрипторы логического форматирования</h2>
+    <p>
+        Используются для SEO - Search Engine Optimization.
+        Некоторые дескрипторы логического форматирования дублируют дескрипторы физического форматирования
+        <br>
+        <strong>Strong</strong><br>
+        <em>Emphasized</em><br>
+        Дескриптор <small>small</small> делает размер шрифта на 1 меньше базового, а <span style="font-size:larger">big</span> &ndash; на 1 больше базового<br>
+        Базовый размер шрифта во всех браузерах &ndash; 15 пикселей<br>
+        Индексы <sub>sub</sub> <sup>sup</sup><br>
+        Дескрипторы <samp>samp</samp> и <code>code</code> используются для вывода фрагментов программного кода.
+        Эти дескрипторы выводят текст <span style="font-family:monospace">моношримным (моноширным)</span> шрифтом, для этих целей раньше использовался
+        дескриптор 'tt' (Obsolete);<br>
+        Для вывода программного кода также часто используется 'pre' &ndash; Preformatted. Это блочный дескриптор, который
+        ни в коем случае нельзя использовать внутри 'p'.
 
-    </p>-->
+    </p>
+    <pre>
+    <code>
+        for (counter; condition; expression)
+        {
+        ...;
+        group-of-statements;
+        ...;
+        }
+    </code>
+    </pre>
+    <h3>Сокращения</h3>
+    <p>
+        Выделяются дескрипторами 'acronym'(Obsolete) и 'abbr' (abbreviation), например:<br>
+        <strong>Visual Studio</strong> &ndash; это лучшая в мире <abbr title="Integrated Development Environment">IDE</abbr>
+    </p>
+    <h3>Цитаты</h3>
+    <p>
 
-    <h2 align="left">Числовые типы:</h2>
+        <q>Short quotation</q><br>
+    </p>
+    <cite>Цитата ('cite')</cite><br>
+    <blockquote>Long quotation является блочным дескриптором, и никогда не включается в 'paragraph'</blockquote><br>
+    <!--<h2 align="left">Числовые типы:</h2>
     <h3 align="left">   Целочисленные типы:</h3>
     <p>
         <b>short</b>. Переменная типа short занимает 2 Байта памяти, и принимает значения в диапазоне<br />
@@ -75,6 +118,6 @@
         которое можно записать в int, а INT_MAX – максимальное значение. У любой беззнаковой
         переменной минимальное значение всегда 0, а максимальное, например для int-a можно
         узнать при помощи UINT_MAX. U означает unsigned.<br />
-    </p>
+    </p>-->
 </body>
 </html>
