--- a/01-HTML/index2.html
+++ b/01-HTML/index2.html
@@ -7,7 +7,7 @@
     <title>Introduction to Web P_21</title>
     <link rel="icon" href="bitcoin.ico" type="image/x-icon">
 </head>
-<body>
+<body style="font-size:24px">
     <h2 style="text-align:left; font-family:Arial">Системы счисления:</h2>
     <p>
         <strong><em>Система счисления (СС)</em></strong> – это набор символов цифр для
@@ -23,7 +23,40 @@
         числах определить невозможно и понятие разрядности у них отсутствует. Из-
         за этого мы не можем умножать непозиционные числа, возводить их в
         степень и т. д.
-
-</p>
+    </p>
+    <p>
+        У любой позиционной системы счисления есть основание. <strong><em>Основание
+        системы счисления</em></strong> – это число, которое показывает, сколько
+        символов используется для обозначения цифр. Или проще говоря:
+        <strong><em>Основание системы счисления</em></strong> – это количество цифр в
+        системе счисления. Также основание системы счисления показывает во
+        сколько раз следующий (старший) разряд больше предыдущего (младшего).
+    </p>
+    <p>
+        У каждого разряда в позиционной СС есть вес, который зависит от его
+        положения в записи числа. <strong><em>Вес разряда</em></strong> – это основание системы
+        счисления, возведенное в степень, равную номеру разряда. Разряды всегда
+        нумеруются с нуля, то есть младший разряд (крайний справа), является
+        нулевым а не первым. У старших разрядов (те которые справа) вес больше
+        чем у младших (те которые слева). Системы счисления собственно и
+        называют позиционными, потому что одна цифра имеет разный вес
+        (величину), в зависимости от своей <em>позиции</em> в записи числа.
+    </p>
+    <p>
+        Любое число в позиционной системе счисления можно разложить на сумму
+        произведений веса разряда на значение соответствующего разряда
+        следующим образом:
+    </p>
+    <p style="text-align:center;font-size:30px">
+        <em>X = a<sup>n-1</sup> &#183; x<sub>n-1</sub>+a<sup>n-2</sup> &#183; x<sub>n-2</sub>+...+a<sup>2</sup> &#183; x<sub>2</sub>+a<sup>1</sup>x<sub>1</sub>+a<sup>0</sup> &#183; x<sub>0</sub></em>
+    </p>
+    <p>
+        где: <em>X</em> &ndash; конечное число;<br>
+        <em>a</em> &ndash; основание системы счисления (количество символов, из которого<br>
+        составляются числа);<br>
+        <em>n</em> &ndash; разрядность числа (количество цифр в записи числа);<br>
+        <em>x</em> &ndash; значение разряда (произвольная цифра из множества возможных);<br>
+        <em>a<sup>0</sup>,a<sup>1</sup>,a<sup>2</sup></em>...&ndash; – весовые коэффициенты разрядов.<br>
+    </p>
 </body>
 </html>
