--- a/02-CSS/index.html
+++ b/02-CSS/index.html
@@ -4,41 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>Современные десктопные процессоры архитектуры x86</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <style>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">-->
+    <!--<style>
         
 
-        h1 {
-            font-family:'Playwrite CU';
-        }
-
-        h2 {
-            color: cornflowerblue;
-        }
-
-        p {
-            font-size: 18px;
-            text-align: justify;
-        }
-        body {
-            font-family: Roboto;
-            font-weight: 100;
-        }
-        #Intro {
-            font-style:italic;
-        }
-        .Definition {
-            font-weight:700;
-        }
-    </style>
+        
+    </style>-->
+    <link rel="stylesheet" href="Style.css" />
 </head>
 <body>
 
     <h1>
         Современные десктопные процессоры архитектуры x86
-        общие принципы работы (x86 CPU digest 2.0)
+        общие принципы работы (<b>x86</b> CPU digest 2.0)
     </h1>
     <p style="font-weight:100" >Roboto 100</p>
     <p style="font-weight:300" >Roboto 300</p>
@@ -47,16 +27,18 @@
     <p style="font-weight:700" >Roboto 700</p>
     <p style="font-weight:900" >Roboto 900</p>
 
-    <p id="Intro">
-        Этот материал представляет собой обновлённую, существенно переработанную и
-        дополненную версию статьи 2006 года, которая называлась «Современные десктопные
-        процессоры архитектуры x86: общие принципы работы (x86 CPU FAQ 1.0)». Правда,
-        чтобы не вводить потенциальных читателей в заблуждение словом «FAQ», мы решили
-        назвать новый материал более правильным, как нам кажется, термином — «дайджест».
-        Действительно, ведь большая его часть — это не ответы на конкретные вопросы, а
-        разъяснения и краткие выжимки из чего угодно — от технической документации до
-        истории развития микропроцессорной отрасли. Для кого предназначен данный материал?
-        Нам видятся две группы потенциальных читателей.
+    <p>
+        <i>
+            Этот материал представляет собой обновлённую, существенно переработанную и
+            дополненную версию статьи 2006 года, которая называлась «Современные десктопные
+            процессоры архитектуры x86: общие принципы работы (x86 CPU FAQ 1.0)». Правда,
+            чтобы не вводить потенциальных читателей в заблуждение словом «FAQ», мы решили
+            назвать новый материал более правильным, как нам кажется, термином — «дайджест».
+            Действительно, ведь большая его часть — это не ответы на конкретные вопросы, а
+            разъяснения и краткие выжимки из чего угодно — от технической документации до
+            истории развития микропроцессорной отрасли. Для кого предназначен данный материал?
+            Нам видятся две группы потенциальных читателей.
+        </i>   
     </p>
     <p>
         <span class="Definition">Первая</span> — это те, кто вдруг обнаружил, что ему действительно интересно узнать, как
