--- a/02-CSS/index.html
+++ b/02-CSS/index.html
@@ -79,6 +79,7 @@
     </p>
     <h2>Код и данные: основной принцип работы процессора</h2>
     <p>
+        <img src="von-neumann.png" alt="VonNeumann" title="Von Neumann"/>
         Если не пытаться изложить здесь «кратенько» курс информатики для средней школы, то
         единственное что хотелось бы напомнить — это то, что процессор (за редкими исключениями)
         исполняет не программы, написанные на каком-нибудь языке программирования (один из которых,
@@ -92,5 +93,9 @@
         Одновременно в памяти располагаются множество программ, необходимых им данных и некоторое
         свободное место.
     </p>
+    <p>
+        <img src="https://www.ixbt.com/cpu/images/cpu-digest-2009/ext-vs-int.png"/>    
+    </p>
+
 </body>
 </html>
