--- a/02-CSS/HTMLPage2.html
+++ b/02-CSS/HTMLPage2.html
@@ -82,14 +82,14 @@
         Одновременно в памяти располагаются множество программ, необходимых им данных и некоторое
         свободное место.
     </p>    
-    <p>
+    <p class="Image">
         <img src="https://www.ixbt.com/cpu/images/cpu-digest-2009/von-neumann.png" />
     </p>
     <p class="Description">
         Блок-схема «машины фон Неймана»,<br />
         на принципах которой построены все x86-процессоры
     </p>
-    <cite>
+    <blockquote>
 
         * &ndash; первым x86 CPU, в который был интегрирован FPU
         (ранее он устанавливался на плату в качестве отдельного чипа),
@@ -98,13 +98,13 @@
         Начиная с Pentium, Intel больше не выпускала x86 CPU без FPU, и эту
         моду быстро подхватили все остальные производители.
 
-    </cite>
+    </blockquote>
 
     <h2>
         Процессорное ядро<br/>
         О многоядерности (многопроцессорности) как концепции
     </h2>
-    <p>
+    <p class="Image">
         <img src="https://www.ixbt.com/cpu/images/cpu-digest-2009/1-th-1-cpu.png" />
     </p>
     <p class="Description">
@@ -117,27 +117,27 @@
         вообще они нужны, и как за счёт большего количества ядер и/или процессоров может достигаться  
         положительный эффект. В данном случае мы для простоты считаем, что система, собранная на базе 
         одного процессора с двумя ядрами, практически идентична по функционалу системе на базе двух 
-        процессоров с одним ядром — если ядра в обоих случаях идентичны*. Более подробное разъяснение 
+        процессоров с одним ядром &ndash; если ядра в обоих случаях идентичны*. Более подробное разъяснение 
         можно прочитать в отдельном, более сложном материале, но хотя бы схематически описать ситуацию 
         просто необходимо. Всё нижесказанное относится к концепции SMP (<a href="https://ru.wikipedia.org/w/index.php?title=%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B8%D1%87%D0%BD%D0%B0%D1%8F_%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE%D0%BF%D1%80%D0%BE%D1%86%D0%B5%D1%81%D1%81%D0%BE%D1%80%D0%BD%D0%BE%D1%81%D1%82%D1%8C&utm_source=ixbtcom">
         Symmetric Multiprocessing</a> cимметричная многопроцессорность), т.к. пока на x86 прижился именно 
-        этот вариант. Он требует, чтобы при любом числе процессоров (строго говоря — процессорных ядер) 
+        этот вариант. Он требует, чтобы при любом числе процессоров (строго говоря &ndash; процессорных ядер) 
         в системе они все были одинаковые, каждый может быть заменен любым другим, и все они осуществляют 
         доступ к одному и тому же массиву памяти.
     </p>
-    <cite>
-        * — pаньше многоядерный процессор на массовом рынке был мечтой практически неосуществимой, 
+    <blockquote>
+        * &ndash; pаньше многоядерный процессор на массовом рынке был мечтой практически неосуществимой, 
         поэтому в тех отраслях, где требовалась высокая производительность в специфических задачах, 
         использовались системы не многоядерные, а многопроцессорные. Вместо того, чтобы интегрировать 
-        N ядер в один чип — на системную плату устанавливали N разъёмов, и в них — N одноядерных 
+        N ядер в один чип &ndash; на системную плату устанавливали N разъёмов, и в них &ndash; N одноядерных 
         процессоров. Условно, современный десктоп на N-ядерном процессоре, можно приравнять к 
-        N-процессорной системе. Впрочем, многопроцессорные системы есть и сейчас — для тех, кого 
+        N-процессорной системе. Впрочем, многопроцессорные системы есть и сейчас &ndash; для тех, кого 
         не устраивает максимально возможное количество ядер в одном CPU. Так, например, если вам 
-        нужна 16-процессорная (16-ядерная) система — то ввиду отсутствия 16-ядерных x86-процессоров 
+        нужна 16-процессорная (16-ядерная) система &ndash; то ввиду отсутствия 16-ядерных x86-процессоров 
         (пока, на 2009 г.…), вам придётся согласиться на 4-процессорную систему, в которой у 
         каждого процессора будет по 4 ядра.
-    </cite>
-    <p>
+    </blockquote>
+    <p class="Image">
         <img src="https://www.ixbt.com/cpu/images/cpu-digest-2009/4-cpu-mb.png"/>
     </p>
     <p class="Description">
