--- a/02-CSS/index.html
+++ b/02-CSS/index.html
@@ -20,12 +20,12 @@
         Современные десктопные процессоры архитектуры x86
         общие принципы работы (<b>x86</b> CPU digest 2.0)
     </h1>
-    <p style="font-weight:100" >Roboto 100</p>
+    <!--<p style="font-weight:100" >Roboto 100</p>
     <p style="font-weight:300" >Roboto 300</p>
     <p style="font-weight:400" >Roboto 400</p>
     <p style="font-weight:500" >Roboto 500</p>
     <p style="font-weight:700" >Roboto 700</p>
-    <p style="font-weight:900" >Roboto 900</p>
+    <p style="font-weight:900" >Roboto 900</p>-->
 
     <p>
         <i>
@@ -64,7 +64,76 @@
         процессоры, специализированные процессоры с архитектурой x86, всевозможные
         embedded-варианты — всё это в рамках статьи не рассматривается.
     </p>
-    <h2>Общее устройство вычислительной машины</h2>
+
+    <ul id="Content">
+        <li> <a href="#Intro">Введение</a>
+        <ul>
+            <li><a href="#GeneralComputerArchitecture">Общее устройство вычислительной машины</a></li>
+            <li><a href="#CodeAndData">Код и данные: основной принцип работы процессора</a></li>
+        </ul>
+        </li>
+        <li>Общие принципы взаимодействия процессора и ОЗУ
+        <ul>
+            <li><a href="#MemoryControllers">Контроллер памяти</a></li>
+            <li>Процессорная шина</li>
+            <li><a href="HTMLPageRAM.html">Оперативная память</a>
+            <ul>
+                <li><a href="HTMLPageRAM.html#MemoryBusCapacity">Разрядность шины памяти, N-канальные контроллеры памяти</a></li>
+                <li><a href="HTMLPageRAM.html#RAMSpeed">Скорость чтения и записи</a></li>
+                <li><a href="HTMLPageRAM.html#Latency">Латентность</a></li>
+            </ul>
+            </li>
+        </ul>
+        </li>
+        <li>Процессор: сведения общего характера
+        <ul>
+            <li>Понятие архитектуры
+            <ul>
+                <li>Архитектура как совместимость с кодом</li>
+                <li>Архитектура как характеристика семейства процессоров</li>
+                <li>64-битные расширения классической x86 (IA32) архитектуры</li>
+            </ul>
+            </li>
+            <li>Процессорное ядро
+            <ul>
+                <li>О многоядерности (многопроцессорности) как концепции</li>
+                <li>Число ядер и технология HyperThreading</li>
+                <li>Различия между ядрами одной микроархитектуры</li>
+                <li>Ревизии</li>
+                <li>Частота работы ядра</li>
+            </ul>
+            </li>
+            <li>Виртуализация</li>
+            <li>Особенности образования названий процессоров</li>
+            <li>Изменение скорости "в мегагерцах" &ndash; как это возможно?</li>
+            <li>О некоторых особенностях технологии DDR и шин HT и QPI</li>
+            <li>Внешние данные: корпус, разъём, охлаждение</li>
+        </ul>
+        </li>
+        <li>Процессор: детальней
+        <ul>
+            <li>Кэш
+            <ul>
+                <li>Общее описание и принцип действия</li>
+                <li>Многоуровневое кэширование</li>
+            </ul>
+            </li>
+            <li>Декодер</li>
+            <li>Регистры процессора</li>
+            <li>Функциональные устройства
+            <ul>
+                <li>Арифметико-логические устройства</li>
+                <li>Блоки вычислений с плавающей запятой и векторной обработки</li>
+                <li>Блоки обмена данных с памятью</li>
+            </ul>
+            </li>
+        </ul>
+        </li>
+    </ul>
+
+    <p>Исходная статья: <a href="https://www.ixbt.com/cpu/cpu-digest-2009.shtml" target="_blank">https://www.ixbt.com/cpu/cpu-digest-2009.shtml</a></p>
+    <h2 id="Intro">Введение</h2>
+    <h3 id="GeneralComputerArchitecture">Общее устройство вычислительной машины</h3>
     <p>
         Любой компьютер как универсальный инструмент для работы с информацией устроен очень
         просто. Все его части можно разделить на 3 вида: устройства обработки, хранения и
@@ -77,9 +146,9 @@
         вычислений, локальной памяти и обмена. Большая часть пока ещё непонятных терминов именует
         конкретные детали процессора или методы их взаимодействий.
     </p>
-    <h2>Код и данные: основной принцип работы процессора</h2>
+    <h3 id="CodeAndData">Код и данные: основной принцип работы процессора</h3>
     <p>
-        <img src="von-neumann.png" alt="VonNeumann" title="Von Neumann"/>
+        <a href="von-neumann.png" target="_blank"> <img src="von-neumann.png" alt="VonNeumann" title="Von Neumann" /></a>
         Если не пытаться изложить здесь «кратенько» курс информатики для средней школы, то
         единственное что хотелось бы напомнить — это то, что процессор (за редкими исключениями)
         исполняет не программы, написанные на каком-нибудь языке программирования (один из которых,
@@ -94,8 +163,9 @@
         свободное место.
     </p>
     <p>
-        <img src="https://www.ixbt.com/cpu/images/cpu-digest-2009/ext-vs-int.png"/>    
+        <img id="MemoryControllers" src="https://www.ixbt.com/cpu/images/cpu-digest-2009/ext-vs-int.png"/>    
     </p>
-
+    <h4><a href="#Content">Содержание</a></h4>
+    <h4><a href="#">Наверх</a></h4>
 </body>
 </html>
