--- a/03-Lists/HW.html
+++ b/03-Lists/HW.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ol style="list-style-type:upper-roman">
-        <li style="color:darkred">Photoshop
+        <li style="color:red">Photoshop
         <ul class="SecondLevel">
             <li>Интерфейс</li>
             <li>Эффекты</li>
