--- a/04-Tables/HTMLPage1.html
+++ b/04-Tables/HTMLPage1.html
@@ -26,5 +26,11 @@
             <td>3.3</td>
         </tr>
     </table>
+
+    <table>
+        <tr>
+            <th>Процессор</th>
+        </tr>
+    </table>
 </body>
 </html>
