--- a/05-Forms/HTMLPage1.html
+++ b/05-Forms/HTMLPage1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Регистрация</title>
+    <link rel="stylesheet" href="form.css"/>
     <style>
         /*file:///C:/Users/Crush/source/repos/Web/05-Forms/HTMLPage1.html?
             fullName=asdsa&passwd=asdasd&phone=dsadsad&email=dsad%40asd&birthDate=
@@ -56,12 +57,154 @@
                 <option>Воскресенье</option>
             </select>
         </p>
+
+        <div class="EULA">
+            <h1>
+                End-User License Agreement<br>
+                Microsoft Windows XP Professional
+                ЛИЦЕНЗИОННОЕ СОГЛАШЕНИЕ
+                ВАЖНО - ПРОЧТИТЕ ВНИМАТЕЛЬНО!
+            </h1>
+            <h2>
+                Настоящее лицензионное соглашение (далее
+                "лицензионное соглашение") является юридическим
+                соглашением, заключаемым между вами (физическим
+                или юридическим лицом) и Microsoft Corporation
+                (далее "корпорация Майкрософт") относительно
+                указанного выше программного продукта корпорации
+                Майкрософт, который включает в себя программное
+                обеспечение, а также может включать
+                соответствующие носители, любые печатные
+                материалы, любую "встроенную" или "электронную"
+                документацию и службы в Интернете (далее
+                "продукт"). Продукт может сопровождаться
+                документами, дополняющими или изменяющими
+                настоящее лицензионное соглашение.
+                УСТАНАВЛИВАЯ, КОПИРУЯ ИЛИ ИНЫМ ОБРАЗОМ
+                ИСПОЛЬЗУЯ ПРОДУКТ, ВЫ ТЕМ САМЫМ СОГЛАШАЕТЕСЬ
+                С ПОЛОЖЕНИЯМИ И УСЛОВИЯМИ НАСТОЯЩЕГО
+                ЛИЦЕНЗИОННОГО СОГЛАШЕНИЯ. ЕСЛИ ВЫ НЕ
+                СОГЛАСНЫ С ПОЛОЖЕНИЯМИ И УСЛОВИЯМИ
+                НАСТОЯЩЕГО ЛИЦЕНЗИОННОГО СОГЛАШЕНИЯ, НЕ
+                УСТАНАВЛИВАЙТЕ И НЕ ИСПОЛЬЗУЙТЕ ДАННЫЙ
+                ПРОДУКТ; ВЫ МОЖЕТЕ ВЕРНУТЬ ЕГО ЛИЦУ, У
+                КОТОРОГО ВЫ ПРИОБРЕЛИ ПРОДУКТ, И ПОЛУЧИТЬ
+                ОБРАТНО УПЛАЧЕННЫЕ ВАМИ ДЕНЬГИ.
+            </h2>
+            <ol>
+
+                <li>
+                    ОБЪЕМ ЛИЦЕНЗИИ.
+                    Корпорация Майкрософт предоставляет вам следующие
+                    права при условии соблюдения вами всех положений и
+                    условий настоящего лицензионного соглашения:
+                    * Установка и использование.
+                    Разрешается устанавливать, использовать,
+                    осуществлять доступ, отображать и запускать одну
+                    копию продукта на одном компьютере, в качестве
+                    которого может выступать рабочая станция, терминал
+                    или любое другое устройство (далее "рабочая
+                    станция"). Продукт нельзя использовать
+                    одновременно более чем 2 (двумя) процессорами
+                    одной рабочей станции. К рабочей станции
+                    разрешается подключать не более 10 (десяти)
+                    компьютеров или других электронных устройств
+                    (далее "устройство") для использования служб
+                    данного продукта, причем исключительно для доступа
+                    к файловым службам, службам печати, службам IIS, а
+                    также к службам удаленного доступа (включая общий
+                    доступ к подключению и телефонные службы).
+                    Максимальное количество подключений, равное
+                    десяти, включает любые косвенные подключения,
+                    производимые через "мультиплексирующее" или иное
+                    программное или аппаратное обеспечение,
+                    позволяющее осуществлять коллективный доступ или
+                    поочередные подключения. Если иное явно не
+                    оговорено ниже в разделе о программе NetMeeting,
+                    удаленном помощнике и удаленном рабочем столе,
+                    запрещается предоставлять с помощью продукта
+                    другому устройству возможность использовать,
+                    осуществлять доступ, запускать или отображать
+                    другие программы, находящиеся на рабочей станции,
+                    а также использовать, осуществлять доступ,
+                    запускать или отображать продукт или
+                    пользовательский интерфейс продукта на каком-либо
+                    устройстве, если только для этого устройства не
+                    приобретена дополнительная лицензия на продукт.
+                </li>
+                <li>
+                    ОБНОВЛЕНИЯ.
+                    Если программный продукт является обновлением, для
+                    его использования вам необходимо иметь
+                    соответствующую лицензию на продукт, указанный
+                    корпорацией Майкрософт как подпадающий под
+                    предложение об обновлении После обновления
+                    запрещается использовать продукт, являющийся
+                    основанием вашего права на обновление.
+                </li>
+                <li>
+                    ДОПОЛНИТЕЛЬНОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ И
+                    СЛУЖБЫ.
+                    Настоящее лицензионное соглашение распространяется
+                    также на предназначенные для продукта обновления,
+                    добавления, дополнительные компоненты и компоненты
+                    служб в Интернете, которые могут быть доступны или
+                    предоставлены вам корпорацией Майкрософт после
+                    приобретения вами исходной копии продукта, если
+                    такое обновление, добавление, дополнительный
+                    компонент или компонент служб в Интернете не
+                    сопровождается иными условиями, установленными
+                    корпорацией Майкрософт. Корпорация Майкрософт
+                    оставляет за собой право прекратить работу любой
+                    службы в Интернете, предоставленной или доступной
+                    вам посредством использования продукта. Настоящее
+                    лицензионное соглашение не предоставляет вам
+                    никаких прав на использование включенных в продукт
+                    компонентов пакета средств разработки Windows
+                    Media Format Software Development Kit (далее
+                    "WMFSDK") для разработки приложений, использующих
+                    технологию Windows Media. Для использования
+                    средств WMFSDK с целью разработки таких приложений
+                    необходимо посетить веб-страницу
+                    http://msdn.microsoft.com/workshop/imedia/
+                    windowsmedia/sdk/wmsdk.asp, принять условия
+                    отдельного лицензионного соглашения на
+                    использование пакета WMFSDK, загрузить
+                    соответствующий пакет WMFSDK и установить его на
+                    своем компьютере.
+                </li>
+                <li>
+                    ПЕРЕДАЧА - внутренняя.
+                    Продукт разрешается переносить на другую рабочую
+                    станцию. После переноса продукта на другую рабочую
+                    станцию его следует полностью удалить с исходной
+                    рабочей станции. Передача третьим лицам.
+                    Первоначальный пользователь продукта имеет право
+                    единовременной передачи его другому лицу. Такая
+                    передача должна включать все составные части,
+                    носители и печатные материалы, настоящее
+                    лицензионное соглашение и сертификат подлинности,
+                    если таковой имеется. Такая передача не может
+                    являться косвенной, например, в виде переуступки.
+                    Для такой передачи продукта необходимо, чтобы
+                    получатель предварительно согласился со всеми
+                    условиями настоящего лицензионного соглашения.
+                    Запрет на передачу во временное пользование.
+                    Запрещается предоставлять продукт в прокат, в
+                    аренду, во временное пользование и использовать
+                    продукт для оказания третьим лицам сетевых услуг
+                    на коммерческой основе.
+                </li>
+            </ol>
+        </div>
+
         <p>
             Выберите ваш любимый цвет: <input type="color" name="color"><br>
             Когда вы хотите каникулы: <input type="week" name="vacancy"><br>
             Куда бы вы хотели поехать на каникулах: <input type="search" placeholder="Поиск" name="place" /><br>
             Насколько вы довольны обучением:<br>
             <input type="range" name="happiness" /><br>
+
             <input type="reset" value="Обновить" />
             <input type="submit" value="Применить"/>
             <input type="button" value="&#9658"/>
